--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ websockets==11.0.3
 requests==2.30.0
 python-dotenv==1.0.0
 asyncio==3.4.3
-aiohttp==3.8.4
+aiohttp>=3.8.5,<4.0.0
 networkx==3.1
 scikit-learn==1.2.2
 joblib==1.2.0
