--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ plotly==5.14.1
 websockets==11.0.3
 requests==2.30.0
 python-dotenv==1.0.0
-asyncio==3.4.3
-aiohttp>=3.8.5,<4.0.0
+# asyncio is part of the standard library and should not be installed separately
+aiohttp>=3.9.0,<4.0.0
 networkx==3.1
 scikit-learn==1.2.2
 joblib==1.2.0
