--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-ccxt==3.0.74
-streamlit==1.22.0
-pandas==2.0.1
-numpy==1.24.3
+ccxt>=4.0.0
+streamlit>=1.38.0
+pandas>=2.2.0
+numpy>=1.26.0
 plotly==5.14.1
 websockets==11.0.3
 requests==2.30.0
