--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,13 @@ ccxt>=4.0.0
 streamlit>=1.38.0
 pandas>=2.2.0
 numpy>=1.26.0
-plotly==5.14.1
-websockets==11.0.3
-requests==2.30.0
-python-dotenv==1.0.0
-# asyncio is part of the standard library and should not be installed separately
+plotly>=5.14.1
+websockets>=11.0.3
+requests>=2.30.0
+python-dotenv>=1.0.0
 aiohttp>=3.9.0,<4.0.0
-networkx==3.1
-scikit-learn==1.2.2
-joblib==1.2.0
-matplotlib==3.7.1
-tqdm==4.65.0
+networkx>=3.1
+scikit-learn>=1.5.0
+joblib>=1.2.0
+matplotlib>=3.7.1
+tqdm>=4.65.0
